fluentd-kafka-elastic-influxdb/kubernetes/burrow.yml
---
apiVersion: v1
kind: Service
metadata:
  name: burrow-service
  labels:
   app: burrow
spec:
  ports:
  - name: forward
    protocol: TCP
    port: 8000
  - name: forward-udp
    protocol: UDP
    port: 8000
  selector:
    app: burrow
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: burrow
  labels:
    app: burrow
spec:
  replicas: 1
  selector:
    matchLabels:
      app: burrow
  template:
    metadata:
      labels:
        app: burrow
    spec:
      containers:
      - name: burrow
        #image: docker.pkg.github.com/linkedin/burrow/burrow:v1.3.4
        image: solsson/burrow:latest
        ports:
        - name: http
          containerPort: 8000
          protocol: TCP
        livenessProbe:
          tcpSocket:
            port: http
          initialDelaySeconds: 20
          periodSeconds: 10
        volumeMounts:
        - name: config
          mountPath: /etc/burrow
      volumes:
      - name: config
        configMap:
          name: burrow-config
---
