fluentd-kafka-elastic-influxdb/kubernetes/elasticsearch-cluster.yml
---
apiVersion: v1
kind: Service
metadata:
 name: elasticsearch
 labels:
  service: elasticsearch
spec:
 clusterIP: None
 ports:
 - port: 9200
   name: http
 - port: 9300
   name: tcp
 selector:
  service: elasticsearch
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: elasticsearch
  labels:
    service: elasticsearch
spec:
  serviceName: es
  replicas: 3
  selector:
    matchLabels:
      service: elasticsearch
  template:
    metadata:
      labels:
        service: elasticsearch
    spec:
      terminationGracePeriodSeconds: 300
      containers:
      - name: elasticsearch
        image: docker.elastic.co/elasticsearch/elasticsearch:7.10.1
        ports:
        - containerPort: 9200
          name: http
        - containerPort: 9300
          name: tcp
        livenessProbe:
          tcpSocket:
            port: tcp
          initialDelaySeconds: 20
          periodSeconds: 10
        volumeMounts:
        - name: data
          mountPath: /usr/share/elasticsearch/data
  volumeClaimTemplates:
  - metadata:
      name: data
    spec:
      accessModes:
        - ReadWriteOnce
      storageClassName: ssd
      resources:
        requests:
          storage: 10Gi
