fluentd-kafka-elastic-influxdb/kubernetes/fluentd.yml
---
apiVersion: v1
kind: Service
metadata:
  name: fluentd
  labels:
   app: fluentd
spec:
  ports:
  - name: forward
    protocol: TCP
    port: 5000
  selector:
    app: fluentd
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fluentd
  labels:
    app: fluentd
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fluentd
  template:
    metadata:
      labels:
        app: fluentd
    spec:
      containers:
      - name: fluentd
        image: noahbailey/fluentd-output:latest
        ports:
        - name: forward
          containerPort: 5000
          protocol: TCP
        - name: forward-udp
          containerPort: 5000
          protocol: UDP
        livenessProbe:
          tcpSocket:
            port: forward
          initialDelaySeconds: 20
          periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: fluentd-input
  labels:
   app: fluentd-input
spec:
  type: LoadBalancer
  ports:
  - name: forward
    protocol: TCP
    port: 5000
  selector:
    app: fluentd-input
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fluentd-input
  labels:
    app: fluentd-input
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fluentd-input
  template:
    metadata:
      labels:
        app: fluentd-input
    spec:
      containers:
      - name: fluentd-input
        image: noahbailey/fluentd-input:latest
        ports:
        - name: forward
          containerPort: 5000
          protocol: TCP
        - name: forward-udp
          containerPort: 5000
          protocol: UDP
        livenessProbe:
          tcpSocket:
            port: forward
          initialDelaySeconds: 20
          periodSeconds: 10
