fluentd-kafka-elastic-influxdb/kubernetes/influx.yml
---
apiVersion: v1
kind: Service
metadata:
 name: influxdb
 labels:
  service: influxdb
spec:
 clusterIP: None
 ports:
 - port: 8086
   name: http
 selector:
  service: influxdb
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: influxdb
  labels:
    service: influxdb
spec:
  serviceName: influxdb
  replicas: 1
  selector:
    matchLabels:
      service: influxdb
  template:
    metadata:
      labels:
        service: influxdb
    spec:
      terminationGracePeriodSeconds: 300

      containers:
      - name: influxdb
        image: quay.io/influxdb/influxdb:v2.0.4
        ports:
        - containerPort: 8086
          name: http
        volumeMounts:
        - name: data
          mountPath: /var/lib/influxdb
  volumeClaimTemplates:
  - metadata:
      name: data
    spec:
      accessModes:
        - ReadWriteOnce
      storageClassName: ssd
      resources:
        requests:
          storage: 10Gi
