fluentd-kafka-elastic-influxdb/kubernetes/kafka.yml
---
apiVersion: v1
kind: Service
metadata:
  name: kafka-service
  labels:
    app: kafka
spec:
  ports:
  - port: 9092
    targetPort: 9092
    protocol: TCP
  selector:
    app: kafka

---
kind: StatefulSet
apiVersion: apps/v1
metadata:
  name: kafka
spec:
  serviceName: kafka-broker
  replicas: 3
  selector:
    matchLabels:
      app: kafka
  template:
    metadata:
      labels:
        app: kafka
    spec:
      containers:
      - name: kafka
        image: wurstmeister/kafka:2.11-2.0.1
        ports:
        - containerPort: 9092
        volumeMounts:
        - name: data
          mountPath: /kafka/kafka-logs
  volumeClaimTemplates:
  - metadata:
      name: data
    spec:
      accessModes:
        - ReadWriteOnce
      storageClassName: ssd
      resources:
        requests:
          storage: 10Gi
