fluentd-kafka-elastic-influxdb/kubernetes/kibana.yml
---
apiVersion: v1
kind: Service
metadata:
  name: kibana-service
  labels:
   app: kibana
spec:
  type: ClusterIP
  ports:
  - port: 5601
    name: http
  selector:
    app: kibana
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kibana
  labels:
    app: kibana
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kibana
  template:
    metadata:
      labels:
        app: kibana
    spec:
      containers:
      - name: kibana
        image: kibana:7.10.1
        ports:
        - name: http
          containerPort: 5601
