fluentd-kafka-elastic-influxdb/kubernetes/grafana.yml
---
apiVersion: v1
kind: Service
metadata:
  name: grafana-service
  labels:
   app: grafana
spec:
  ports:
  - name: http
    protocol: TCP
    port: 3000
  selector:
    app: grafana
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana
  labels:
    app: grafana
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grafana
  template:
    metadata:
      labels:
        app: grafana
    spec:
      containers:
      - name: grafana
        image: grafana/grafana:7.1.5
        ports:
        - name: http
          containerPort: 3000
          protocol: TCP
        livenessProbe:
          tcpSocket:
            port: http
          initialDelaySeconds: 20
          periodSeconds: 10
        volumeMounts:
        - mountPath: /var/lib/grafana
          name: grafana-storage
      volumes:
        - name: grafana-storage
          emptyDir: {}
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
spec:
  rules:
  - host: grafana.kube.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: grafana-service
            port:
              number: 3000
